@startuml
title UI system class diagram

package UI {
    class Window {
        - title: String
        - width: int
        - height: int
        - instance: Window
        ---
        + GetInstance(): Window

        + Window()
        + Window(title: String)
        + Window(title: String, width: int, height: int)
        + setTitle(title: String): void
        + setWidth(width: int): void
        + setHeight(height: int): void
        + setScene(scene: Scene): void
        + getTitle(): String
        + getWidth(): int
        + getHeight(): int
        + getScene(): Scene
        + open(): void
        + close(): void
    }

    class Scene {
        # Scene()
        + update(deltaTime: float): void
        + render(deltaTime: float): void
        + onEvent(event: Event): void
    }

    class Element {
        - position: Vector2
        - size: Vector2
        - shouldRender: boolean
        ---
        # Element()
        # Element(position: Vector2, size: Vector2)
        + setPosition(position: Vector2): void
        + setSize(size: Vector2): void
        + getPosition(): Vector2
        + getSize(): Vector2
        + needsRender(): boolean
        + update(deltaTime: float): void
        + render(deltaTime: float): void
        + onHovered(state: boolean): void
        + onPressed(state: boolean): void
    }

    class GameScene

    class MenuScene {
        - selectedElementIndex: int
    }
    note right: selectedElementIndex = -1 if no element is selected (using mouse)
}

Window -right- Scene: scene
MenuScene -up-|> Scene
GameScene -up-|> Scene

Element "*" -right- "1" MenuScene: elements

@enduml